--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     </form>  
     </div>
     <div class="small-6 large-4 column" id="twitter">
+        <a class="twitter-timeline" href="https://twitter.com/sitati_elsis" data-widget-id="690448343387017216">Tweets by @sitati_elsis</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         
         
     </div>
