added submit button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="row first-row expanded" id="row-one">
     <div class ="small-6 large-8 column" id="form">
       <p>Register Below</p>
-        <form>
+        <form id="form-1">
         First name: 
         <input type="text" name="first_name">
         Second name:
@@ -32,7 +32,8 @@
          <option value="russia">RUSSIA</option>  
         <option  value="china">CHINA</option> 
         </select>
-        
+        <br>
+       <button type="submit"  form="form-1" value="Submit" >Submit</button> 
     </form>  
     </div>
     <div class="small-6 large-4 column" id="twitter">
