added hover.css to the navigation bar

--- a/G20-summit final/index.html
+++ b/G20-summit final/index.html
@@ -39,11 +39,11 @@
                 
 <div class="column row header">
     <ul class="menu">
-        <li><a href="#" class="hvr-overline-from-left">Contact US</a></li>
-        <li><a href="#" class="hvr-overline-from-left">Schedule</a></li>
-        <li><a href="#" class="hvr-overline-from-left">Home</a></li>
-        <li><a href="#" class="hvr-overline-from-left">About us</a></li>
-        <li><a href="#" class="hvr-overline-from-left">Partners</a></li>
+        <li><a href="#" class="hvr-underline-from-left">Contact US</a></li>
+        <li><a href="#" class="hvr-underline-from-right">Schedule</a></li>
+        <li><a href="#" class="hvr-underline-from-center">Home</a></li>
+        <li><a href="#" class="hvr-reveal">About us</a></li>
+        <li><a href="#" class="hvr-underline-reveal">Partners</a></li>
     </ul>
                     
 </div>
